# ot-harjoitustyo

./: .$diagram.drawio.bkp  .gitignore  LICENSE  README.md
dokumentaatio/: maarittelydokumentti.md  työaikakirjanpito (Gabriel .'s conflicted copy 2022-11-15 1).md  työaikakirjanpito.md
laskarit/: gitlog.txt
laskarit/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  viikko1.md
laskarit/viikko2/: .coverage  pyproject.toml
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: viikko3.md
scanflow/: .coveragerc  pyproject.toml  tasks.py
scanflow/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
scanflow/src/: main.py
scanflow/src/entities/: pdf_document.py
scanflow/src/repositories/: pdf_repository.py
scanflow/src/services/: fallback_pdf_service.py  pdf_splitter_service.py
scanflow/src/tests/: test_fallback_pdf_service.py  test_helpers.py  test_pdf_document.py  test_pdf_repository.py  test_pdf_splitter_service.py
scanflow/src/ui/: app.py  theme.py
scanflow/src/ui/components/: custom_range_manager.py  drop_area.py  drop_area_widget.py  file_info_section.py  fixed_range_settings.py  header.py  mode_selector.py  notification_manager.py
scanflow/src/ui/styles/: __init__.py  base_styles.py  button_styles.py  container_styles.py  dialog_styles.py  drop_area_styles.py  group_styles.py  qt_theme.py  settings_styles.py
scanflow/src/utils/: helpers.py
