[tool.poetry]
name = "scanflow"
version = "0.2.0"
description = "PDF-tiedostojen käsittelysovellus"
authors = ["Gabrot"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.0.0"
pymupdf = "^1.22.0"
PyQt6 = "^6.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
pylint = "^2.17.4"
autopep8 = "^2.0.2"
invoke = "^2.2.0"
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"